# posys2

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  READMe.md5  camera.cpp  camera.h  camera.h~  camlist.txt  camlist.txt~  cammat.h  cammat.h~  cmake_install.cmake  cnet.txt  conv0  convlayer.h  convlayer.h~  convnet.h  convnet.h~  fullyconnlayer.h  fullyconnlayer.h~  inputlayer.h  inputlayer.h~  invert_matrix.hpp  layer.h  layer.h~  obeam.h  obeam.h~  poollayer.h  poollayer.h~  posys  qt_opengl (copy).cpp  qt_opengl.cpp  relulayer.h  relulayer.h~  serial.hpp  sigmoidlayer.h  sigmoidlayer.h~  softmaxlayer.h  (+5 more)
benchmark/: mul_add.cpp
cifar10/: label
cifar10/conv_no1/: cnet_10_fc  cnet_1_conv  cnet_4_conv  cnet_7_conv
cifar10/conv_no10/: cnet_10_fc  cnet_12_fc  cnet_14_fc  cnet_1_conv  cnet_4_conv  cnet_7_conv  cnet_sugar
cifar10/conv_no11/: cnet_11_fc  cnet_1_conv  cnet_4_conv  cnet_7_fc  cnet_9_fc  cnet_sugar
cifar10/conv_no2/: cnet_10_fc  cnet_1_conv  cnet_4_conv  cnet_7_conv  cnet_sugar
cifar10/conv_no3/: cnet_10_fc  cnet_1_conv  cnet_4_conv  cnet_7_conv  cnet_sugar
cifar10/conv_no4/: cnet_10_fc  cnet_1_conv  cnet_4_conv  cnet_7_conv  cnet_sugar
cifar10/conv_no5/: cnet_10_fc  cnet_1_conv  cnet_4_conv  cnet_7_conv  cnet_sugar
cifar100/conv_no1/: cnet  cnet_1_conv  cnet_7_fc  cnet_sugar  cnet~
cifar100/conv_no1 (another copy)/: cnet  cnet_1_conv  cnet_7_fc
cifar100/conv_no1 (copy)/: cnet  cnet_7_fc
cifar100/conv_no10/: cnet_4_conv  cnet_7_conv
cifar100/conv_no12/: cnet_1_conv
cifar100/conv_no4/: cnet_sugar
cifar100/conv_no5/: cnet_7_conv
cifar100/conv_no6/: cnet_10_fc  cnet_1_conv  cnet_4_conv  cnet_7_conv
cifar100_v1/conv_no1/: cnet  cnet_1_conv  cnet_7_fc
cifar100_v1/conv_no1 (copy)/: cnet_1_conv
cifar100_v1/conv_no10/: cnet_10_fc  cnet_12_fc  (+3 more)
(+14 files in other folders)
